2008-06-09  Paul Brook  <paul@codesourcery.com>

	bfd/
	* elf32-arm.c (elf32_arm_merge_private_bfd_data): Allow BE8 shared
	libraries.

2008-06-09  Christophe Lyon  <christophe.lyon@st.com>

	* elf32-arm.c (arm_stub_is_thumb): Define.
	(elf32_arm_final_link_relocate): Handle near mode switching stubs.

2008-06-07  Alan Modra  <amodra@bigpond.net.au>

	* elf32-spu.c (spu_elf_auto_overlay): Add valid area below sp
	to stack calculation.

2008-06-06  Paul Brook  <paul@codesourcery.com>

	bfd/
	* elf32-arm.c (elf32_arm_merge_private_bfd_data): Reject BE8 input.

2008-06-06  Alan Modra  <amodra@bigpond.net.au>

	* elf32-spu.c (spu_elf_auto_overlay): Relax requirement that
	file names be unique.  Specify archive:path in overlay script.

2008-06-05  Alan Modra  <amodra@bigpond.net.au>

	PR ld/6590
	* elf64-ppc.c (ppc_build_one_stub): Correct reloc offsets.

2008-06-04  Alan Modra  <amodra@bigpond.net.au>

	* elf.c (ignore_section_sym): Don't test section sym value here.
	(elf_map_symbols): Instead check zero value here as was done prior
	to 2006-05-26 change.

2008-06-04  Nick Clifton  <nickc@redhat.com>

	PR ld/6019
	* elf32-avr.c (elf32_avr_relax_section): Handle the case where
	there are no local symbols.

2008-06-04  Alan Modra  <amodra@bigpond.net.au>

	* elf32-spu.c (get_sym_h): Don't attempt to read global syms.
	(process_stubs): Likewise.
	(discover_functions): Don't used cached symbols.
	(maybe_insert_function): Correct condition under which function
	array is realloc'd.
	(mark_functions_via_relocs): Delete unused variable.

2008-05-30  Frediano Ziglio  <frediano.ziglio@vodafone.com>
	    Nick Clifton  <nickc@redhat.com>

	PR ld/6511
	* elf64-hppa.c (allocate_global_data_opd): Default to using the
	dynamic symbol table for local function names in shared libraries.

2008-05-29  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* elf.c (assign_file_positions_for_load_sections): Adjust pre-section
	gaps based on VMA and P_VADDR instead of LMA and P_PADDR addresses.
