@@ -1,3 +1,8 @@
+2008-06-12  DJ Delorie  <dj@redhat.com>
+
+	* common.h (EM_M32C_NEW): Rename to EM_M32C.
+	(EM_M32C): Rename to EM_M32C_OLD.
+
 2008-06-12  Joseph Myers  <joseph@codesourcery.com>
 
 	* common.h: Update e_machine table.
